ont/snapshots/iptables-nat-before-20261002.txt
-P PREROUTING ACCEPT
-P INPUT ACCEPT
-P OUTPUT ACCEPT
-P POSTROUTING ACCEPT
-N dmzmapp
-N fwports
-N portmapp
-N scdrop
-N srvcntrl
-N upnp
-N wansrcnat
-A PREROUTING ! -d 192.168.1.0/24 -i br0 -p tcp -m tcp --dport 8188 -j REDIRECT --to-ports 8188
-A PREROUTING -j srvcntrl
-A PREROUTING -j fwports
-A PREROUTING -j portmapp
-A PREROUTING -j upnp
-A PREROUTING -j dmzmapp
-A PREROUTING -j scdrop
-A POSTROUTING -j wansrcnat
-A fwports -i nbif2 -p udp -m udp --dport 2944 -j ACCEPT
-A fwports -p udp -m udp --dport 520 -j ACCEPT
-A portmapp -d 139.227.106.115/32 -i ppp0 -p tcp -m tcp --dport 30080 -j DNAT --to-destination 192.168.1.3:10080
-A portmapp -d 139.227.106.115/32 -i ppp0 -p udp -m udp --dport 30080 -j DNAT --to-destination 192.168.1.3:10080
-A portmapp -d 139.227.106.115/32 -i ppp0 -p tcp -m tcp --dport 30022 -j DNAT --to-destination 192.168.1.3:22
-A portmapp -d 139.227.106.115/32 -i ppp0 -p udp -m udp --dport 30022 -j DNAT --to-destination 192.168.1.3:22
-A portmapp -d 139.227.106.115/32 -i ppp0 -p tcp -m tcp --dport 35244 -j DNAT --to-destination 192.168.1.3:5244
-A portmapp -d 139.227.106.115/32 -i ppp0 -p tcp -m tcp --dport 13080 -j DNAT --to-destination 192.168.1.13:80
-A portmapp -d 139.227.106.115/32 -i ppp0 -p udp -m udp --dport 13080 -j DNAT --to-destination 192.168.1.13:80
-A portmapp -d 139.227.106.115/32 -i ppp0 -p tcp -m tcp --dport 40022 -j DNAT --to-destination 192.168.1.4:22
-A portmapp -d 139.227.106.115/32 -i ppp0 -p udp -m udp --dport 40022 -j DNAT --to-destination 192.168.1.4:22
-A portmapp -d 139.227.106.115/32 -i ppp0 -p tcp -m tcp --dport 32053 -j DNAT --to-destination 192.168.1.3:2053
-A portmapp -d 139.227.106.115/32 -i ppp0 -p udp -m udp --dport 32053 -j DNAT --to-destination 192.168.1.3:2053
-A portmapp -d 139.227.106.115/32 -i ppp0 -p tcp -m tcp --dport 35140 -j DNAT --to-destination 192.168.1.3:5140
-A portmapp -d 139.227.106.115/32 -i ppp0 -p udp -m udp --dport 35140 -j DNAT --to-destination 192.168.1.3:5140
-A portmapp -d 139.227.106.115/32 -i ppp0 -p tcp -m tcp --dport 39001 -j DNAT --to-destination 192.168.1.3:9001
-A portmapp -d 139.227.106.115/32 -i ppp0 -p tcp -m tcp --dport 38001 -j DNAT --to-destination 192.168.1.3:8001
-A upnp -d 139.227.106.115/32 -p udp -m udp --dport 35419 -j DNAT --to-destination 192.168.1.2:35419
-A upnp -d 139.227.106.115/32 -p udp -m udp --dport 8567 -j DNAT --to-destination 192.168.1.2:8567
-A wansrcnat ! -s 172.238.131.249/32 -o nbif3 -j MASQUERADE
-A wansrcnat ! -s 139.227.106.115/32 -o ppp0 -j MASQUERADE
